[workspace]
members = [
  "benchmarks/lucet-benchmarks",
  "docs/lucet-runtime-example",
  "lucet-concurrency-tests",
  "lucet-module",
  "lucet-objdump",
  "lucet-runtime",
  "lucet-runtime/lucet-runtime-internals",
  "lucet-runtime/lucet-runtime-macros",
  "lucet-runtime/lucet-runtime-tests",
  "lucet-spectest",
  "lucet-wasi",
  "lucet-wasi/generate",
  "lucet-wasi-fuzz",
  "lucet-wasi-sdk",
  "lucet-wiggle",
  "lucet-wiggle/macro",
  "lucet-wiggle/generate",
  "lucetc",
  "fuzz",
  "wasmtime-new-api/crates/wiggle",
  "wasmtime-new-api/crates/wiggle/borrow",
  "wasmtime-new-api/crates/wiggle/generate",
  "wasmtime-new-api/crates/wiggle/macro",
  "wasmtime-new-api/crates/wasi-common",
  "wasmtime-new-api/crates/wasi-common/cap-std-sync",
  "wasmtime-new-api/crates/wasi-common/tokio",
]
exclude = ["wasmtime", "sightglass"]

[profile.test]
rpath = true
