[workspace]
members = [
  "benchmarks/lucet-benchmarks",
  "docs/lucet-runtime-example",
  "lucet-concurrency-tests",
  "lucet-module",
  "lucet-objdump",
  "lucet-runtime",
  "lucet-runtime/lucet-runtime-internals",
  "lucet-runtime/lucet-runtime-macros",
  "lucet-runtime/lucet-runtime-tests",
  "lucet-spectest",
  "lucet-wasi",
  "lucet-wasi-fuzz",
  "lucet-wasi-sdk",
  "lucet-wiggle",
  "lucet-wiggle/macro",
  "lucet-wiggle/generate",
  "lucetc",
  "fuzz",
]
exclude = ["wasmtime", "sightglass"]

[profile.test]
rpath = true


# wasmtime 0.31 / cranelift 0.78 was released missing the ifcmp_sp
# instruction, which lucet requires. cfallin added it back in with
# https://github.com/bytecodealliance/wasmtime/pull/3502. This patch
# points to where that commit was merged into `main`.
[patch.'crates-io']
cranelift-codegen = { git = "https://github.com/bytecodealliance/wasmtime", rev = "b0246038666464837ffeb08fd85fb5d75e5a682b" }
cranelift-entity = { git = "https://github.com/bytecodealliance/wasmtime", rev = "b0246038666464837ffeb08fd85fb5d75e5a682b" }
