[package]
name = "lucet-analyze"
version = "0.1.1"
description = "Analyze object files emitted by the Lucet compiler"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
goblin="0.0.24"
byteorder="1.2.1"
colored="1.6.1"
lucet-module = { path = "../lucet-module", version = "0.1.1" }
