[package]
name = "lucet-idl"
version = "0.1.0"
description = "Describe interfaces between WebAssembly guest programs and lucet-runtime hosts"
authors = ["Pat Hickey <phickey@fastly.com>", "Frank Denis <fdenis@fastly.com>"]
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "lucet-idl"
path = "src/main.rs"

[dependencies]
clap = "2"
failure = "0.1"
xfailure = "0.1"
heck = "0.3"
lucetc = { path = "../lucetc" }

[dev-dependencies]
tempfile = "3.0"
