[package]
name = "lucet-idl"
version = "0.1.1"
description = "Describe interfaces between WebAssembly guest programs and lucet-runtime hosts"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "lucet-idl"
path = "src/main.rs"

[dependencies]
clap = "2"
failure = "0.1"
xfailure = "0.1"
heck = "0.3"
lucetc = { path = "../lucetc" }
lucet-module = { path = "../lucet-module" }
cranelift-entity = { path = "../cranelift/cranelift-entity" }

[dev-dependencies]
tempfile = "3.0"
