[package]
name = "lucet-libc"
version = "0.1.0"
description = "A libc implementation for lucet-runtime"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"

[dependencies]
failure = "0.1"
libc = "0.2.47"
lucet-libc-sys = { path = "lucet-libc-sys" }

[features]
default = []
# used to conditionally link against liblucet-runtime-c.so for testing; eventually this should just
# depend on `lucet-runtime`
no-lucet-runtime-c = ["lucet-libc-sys/no-lucet-runtime-c"]

[profile.test]
rpath = true
