[package]
name = "lucet-module-data"
version = "0.1.0"
authors = ["Pat Hickey <phickey@fastly.com>"]
repository = "https://github.com/fastly/lucet"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift/cranelift-codegen" }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "~1.0.1"
num-derive = "0.2"
num-traits = "0.2"
