[package]
name = "lucet-module-data"
version = "0.1.0"
description = "A structured interface for Lucet module data and metadata"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Pat Hickey <phickey@fastly.com>"]
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift/cranelift-codegen" }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "~1.0.1"
num-derive = "0.2"
num-traits = "0.2"
minisign = "0.5.11"
object = "0.12"
byteorder = "1.3"
