[package]
name = "lucet-module"
version = "0.5.0"
description = "A structured interface for Lucet modules"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
cranelift-entity = { path = "../cranelift/cranelift-entity", version = "0.51.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.1.4"
num-derive = "0.3.0"
num-traits = "0.2.8"
minisign = "0.5.11"
object = "0.14.0"
byteorder = "1.3"
memoffset = "0.5.1"
thiserror = "1.0.4"
serde-big-array = "0.2.0"
derivative = "1.0.3"
