[package]
name = "lucet-objdump"
version = "0.6.2-dev"
description = "Analyze object files emitted by the Lucet compiler"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
object = "0.18"
byteorder="1.2.1"
colored="1.8.0"
lucet-module = { path = "../lucet-module", version = "=0.6.2-dev" }

[package.metadata.deb]
name = "fst-lucet-objdump"
maintainer = "Lucet team <lucet@fastly.com>"
depends = "$auto"
priority = "optional"
assets = [
    ["target/release/lucet-objdump", "/opt/fst-lucet-objdump/bin/lucet-objdump", "755"],
    ["LICENSE", "/opt/fst-lucet-objdump/share/doc/lucet-objdump/", "644"],
]
