[package]
name = "lucet"
version = "0.1.0"
description = "Rust library wrapping lucet-runtime-c"
repository = "https://github.com/fastly/lucet"
authors = ["Pat Hickey <phickey@fastly.com>", "Frank Denis <fdenis@fastly.com>", "Adam C. Foltzer <acfoltzer@fastly.com>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"

[dependencies]
failure = "0.1"
libc = "0.2.47"
lucet-sys = { path = "lucet-sys" }
xfailure = "0.1"
nix = "0.11.0"

[profile.test]
rpath = true
