[package]
name = "lucet-runtime"
version = "0.1.0"
description = "Pure Rust runtime for lucet WebAssembly toolchain"
repository = "https://github.com/fastly/lucet"
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>", "Pat Hickey <phickey@fastly.com>", "Frank Denis <fdenis@fastly.com>", "Tyler McMullen <tyler@fastly.com>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"

[dependencies]
libc = "=0.2.54"
lucet-runtime-internals = { path = "lucet-runtime-internals" }
lucet-module-data = { path = "../lucet-module-data" }
num-traits = "0.2"
num-derive = "0.2"

[dev-dependencies]
byteorder = "1.2"
failure = "0.1"
lazy_static = "1.1"
lucetc = { path = "../lucetc" }
lucet-runtime-tests = { path = "lucet-runtime-tests" }
lucet-wasi-sdk = { path = "../lucet-wasi-sdk" }
nix = "0.13"
tempfile = "3.0"

[build-dependencies]
# only used for tests
cc = "1.0"

[lib]
name = "lucet_runtime"
crate-type = ["rlib", "staticlib", "cdylib"]

[package.metadata.deb]
name = "fst-lucet-runtime"
maintainer = "Adam C. Foltzer <acfoltzer@fastly.com>"
depends = "$auto"
priority = "optional"
assets = [
    ["target/release/liblucet_runtime.a", "/opt/fst-lucet-runtime/lib/", "644"],
    ["target/release/liblucet_runtime.rlib", "/opt/fst-lucet-runtime/lib/", "644"],
    ["target/release/liblucet_runtime.so", "/opt/fst-lucet-runtime/lib/", "755"],
    ["include/*.h", "/opt/fst-lucet-runtime/include/", "644"],
]
