[package]
name = "lucet-runtime"
version = "0.6.2-dev"
description = "Pure Rust runtime for Lucet WebAssembly toolchain"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
libc = "0.2.65"
lucet-runtime-internals = { path = "lucet-runtime-internals", version = "=0.6.2-dev" }
lucet-module = { path = "../lucet-module", version = "=0.6.2-dev" }
num-traits = "0.2"
num-derive = "0.3.0"

[dev-dependencies]
byteorder = "1.2"
lazy_static = "1.1"
lucetc = { path = "../lucetc", version = "=0.6.2-dev" }
lucet-runtime-tests = { path = "lucet-runtime-tests", version = "=0.6.2-dev" }
lucet-wasi-sdk = { path = "../lucet-wasi-sdk", version = "=0.6.2-dev" }
nix = "0.17"
rayon = "1.0"
tempfile = "3.0"
anyhow = "1"

[build-dependencies]
# only used for tests
cc = "1.0"

[lib]
name = "lucet_runtime"
crate-type = ["rlib", "staticlib", "cdylib"]

[package.metadata.deb]
name = "fst-lucet-runtime"
maintainer = "Adam C. Foltzer <acfoltzer@fastly.com>"
depends = "$auto"
priority = "optional"
assets = [
    ["target/release/liblucet_runtime.a", "/opt/fst-lucet-runtime/lib/", "644"],
    ["target/release/liblucet_runtime.rlib", "/opt/fst-lucet-runtime/lib/", "644"],
    ["target/release/liblucet_runtime.so", "/opt/fst-lucet-runtime/lib/", "755"],
    ["include/*.h", "/opt/fst-lucet-runtime/include/", "644"],
]

[features]
default-features = []
uffd = ["lucet-runtime-internals/uffd"]

[package.metadata.docs.rs]
features = ["uffd"]
