[package]
name = "lucet-runtime"
version = "0.7.0-dev"
description = "Pure Rust runtime for Lucet WebAssembly toolchain"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
libc = "0.2.65"
lucet-runtime-internals = { path = "lucet-runtime-internals", version = "=0.7.0-dev" }
lucet-module = { path = "../lucet-module", version = "=0.7.0-dev" }
num-traits = "0.2"
num-derive = "0.3.0"

[dev-dependencies]
anyhow = "1"
byteorder = "1.2"
futures-executor = "0.3.5"
lazy_static = "1.4"
lucet-runtime-tests = { path = "lucet-runtime-tests", version = "=0.7.0-dev" }
lucet-wasi-sdk = { path = "../lucet-wasi-sdk", version = "=0.7.0-dev" }
lucetc = { path = "../lucetc", version = "=0.7.0-dev" }
nix = "0.17"
rayon = "1.0"
tempfile = "3.0"

[build-dependencies]
# only used for tests
cc = "1.0"

[lib]
name = "lucet_runtime"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["uffd"]
uffd = ["lucet-runtime-internals/uffd"]
concurrent_testpoints = []

[package.metadata.docs.rs]
features = ["uffd"]
