[package]
name = "lucet-spectest"
version = "0.4.1"
description = "Test harness to run WebAssembly spec tests (.wast) against the Lucet toolchain"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Lucet team <lucet@fastly.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "spec-test"
path = "src/main.rs"

[dependencies]
lucetc = { path = "../lucetc", version = "0.4.1" }
lucet-module = { path = "../lucet-module", version = "0.4.1" }
lucet-runtime = { path = "../lucet-runtime", version = "0.4.1" }
wabt = "0.9.2"
serde = "1.0"
serde_json = "1.0"
failure = "0.1"
clap="2.32"
tempfile = "3.0"
