[package]
name = "lucet-spectest"
version = "0.7.0-dev"
description = "Test harness to run WebAssembly spec tests (.wast) against the Lucet toolchain"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Lucet team <lucet@fastly.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "spec-test"
path = "src/main.rs"

[dependencies]
lucetc = { path = "../lucetc", version = "=0.7.0-dev" }
lucet-module = { path = "../lucet-module", version = "=0.7.0-dev" }
lucet-runtime = { path = "../lucet-runtime", version = "=0.7.0-dev" }
wabt = "0.9.1"
serde = "1.0"
serde_json = "1.0"
clap="2.32"
tempfile = "3.0"
target-lexicon = "0.10"
thiserror = "1.0.4"
