[package]
name = "lucet-validate"
version = "0.5.0"
description = "Parse and validate webassembly files against witx interface"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Pat Hickey <phickey@fastly.com>"]
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "lucet-validate"
path = "src/main.rs"

[dependencies]
clap = "2"
witx = { path = "../wasi/tools/witx", version = "0.6.0" }
cranelift-entity = { path = "../cranelift/cranelift-entity", version = "0.51.0" }
thiserror = "1.0.4"
wasmparser = "0.39.1"

[dev-dependencies]
lucet-wasi-sdk = { path = "../lucet-wasi-sdk", version = "=0.5.0" }
tempfile = "3.0"
wabt = "0.9.2"

[package.metadata.deb]
name = "fst-lucet-validate"
maintainer = "Lucet team <lucet@fastly.com>"
depends = "$auto"
priority = "optional"
assets = [
    ["target/release/lucet-validate", "/opt/fst-lucet-validate/bin/lucet-validate", "755"],
    ["target/release/liblucet_validate.rlib", "/opt/fst-lucet-validate/lib/", "644"],
    ["LICENSE", "/opt/fst-lucet-validate/share/doc/lucet-validate/", "644"],
    ["../wasi/phases/old/snapshot_0/witx/typenames.witx",
     "/opt/fst-lucet-validate/share/wasi/snapshot_0/typenames.witx", "644"],
    ["../wasi/phases/old/snapshot_0/witx/wasi_unstable.witx",
     "/opt/fst-lucet-validate/share/wasi/snapshot_0/wasi_unstable.witx", "644"],
]
