[package]
name = "lucet-wasi-fuzz"
version = "0.5.0"
description = "Test the Lucet toolchain against native code execution using Csmith"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "2.32"
libc = "0.2.65"
lucetc = { path = "../lucetc" }
lucet-runtime = { path = "../lucet-runtime" }
lucet-module = { path = "../lucet-module" }
lucet-wasi = { path = "../lucet-wasi" }
lucet-wasi-sdk = { path = "../lucet-wasi-sdk" }
nix = "0.15"
num_cpus = "1.10"
progress = "0.2"
rand = "0.6"
regex = "1.1"
rayon = "1.0"
structopt = "0.3.3"
tempfile = "3.0"
wait-timeout = "0.2"
