[package]
name = "lucet-wasi"
version = "0.7.0-dev"
description = "Fastly's runtime for the WebAssembly System Interface (WASI)"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
cast = "0.2"
clap = "2.23"
human-size = "0.4"
lucet-runtime = { path = "../lucet-runtime", version = "=0.7.0-dev"  }
lucet-runtime-internals = { path = "../lucet-runtime/lucet-runtime-internals", version = "=0.7.0-dev" }
lucet-module = { path = "../lucet-module", version = "=0.7.0-dev" }
lucet-wasi-generate = { path = "./generate", version = "=0.7.0-dev" }
lucet-wiggle = { path = "../lucet-wiggle", version = "=0.7.0-dev" }
lucet-wiggle-generate = { path = "../lucet-wiggle/generate", version = "=0.7.0-dev" }
libc = "0.2.65"
nix = "0.17"
rand = "0.6"
wasi-common = { path = "../wasmtime/crates/wasi-common", version = "0.22.0", default-features = false,  features = ["wiggle_metadata"] }
wasi-cap-std-sync = { path = "../wasmtime/crates/wasi-common/cap-std-sync", version = "0.22.0"}
wiggle = { path = "../wasmtime/crates/wiggle", version = "0.22.0" }
tracing = "0.1.19"
tracing-subscriber = "0.2.0"
cap-std = "0.13"

[dev-dependencies]
lucet-wasi-sdk = { path = "../lucet-wasi-sdk" }
lucetc = { path = "../lucetc" }
tempfile = "3.0"
cap-tempfile = "0.13"

[lib]
name = "lucet_wasi"
crate-type = ["lib", "staticlib", "cdylib"]
