[package]
name = "lucet-wiggle"
version = "0.7.0-dev"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[lib]

[dependencies]
lucet-wiggle-macro = { path = "./macro", version = "0.7.0-dev" }
lucet-wiggle-generate = { path = "./generate", version = "0.7.0-dev" }
lucet-runtime = { path = "../lucet-runtime", version = "0.7.0-dev" }
wiggle =  { path = "../wasmtime/crates/wiggle", version = "0.18.0" }

[dev-dependencies]
wiggle-test = { path = "../wasmtime/crates/wiggle/test-helpers" }
tempfile = "3.1"
lucet-wasi-sdk = { path = "../lucet-wasi-sdk", version = "0.7.0-dev" }
lucetc = { path = "../lucetc", version = "0.7.0-dev" }
