[package]
name = "lucetc"
version = "0.7.0-dev"
description = "Fastly's WebAssembly to native code compiler"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[[bin]]
name = "lucetc"
path = "lucetc/main.rs"

[dependencies]
anyhow = "1"
bincode = "1.1.4"
cranelift-codegen = { path = "../wasmtime/cranelift/codegen", version = "0.65.0" }
cranelift-entity = { path = "../wasmtime/cranelift/entity", version = "0.65.0" }
cranelift-native = { path = "../wasmtime/cranelift/native", version = "0.65.0" }
cranelift-frontend = { path = "../wasmtime/cranelift/frontend", version = "0.65.0" }
cranelift-module = { path = "../wasmtime/cranelift/module", version = "0.65.0" }
cranelift-object = { path = "../wasmtime/cranelift/object", version = "0.65.0" }
cranelift-wasm = { path = "../wasmtime/cranelift/wasm", version = "0.65.0" }
target-lexicon = "0.10"
lucet-module = { path = "../lucet-module", version = "=0.7.0-dev" }
lucet-validate = { path = "../lucet-validate", version = "=0.7.0-dev" }
lucet-wiggle-generate = { path = "../lucet-wiggle/generate", version = "=0.7.0-dev" }
wasmparser = "0.58.0"
clap="2.32"
log = "0.4"
env_logger = "0.6"
object = { version = "0.20.0", default-features = false, features = ["write"] }
byteorder = "1.2"
wabt = "0.9.1"
tempfile = "3.0"
bimap = "0.2"
human-size = "0.4"
minisign = "0.5.19"
memoffset = "0.5.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.4"
raw-cpuid = "6.0.0"
