[package]
name = "lucetc"
version = "0.7.0-dev"
description = "Fastly's WebAssembly to native code compiler"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[[bin]]
name = "lucetc"
path = "lucetc/main.rs"

[dependencies]
anyhow = "1"
bincode = "1.1.4"
cranelift-codegen = { version = "0.75.0", features = ["x86" ] }
cranelift-entity = "0.75.0"
cranelift-native = "0.75.0"
cranelift-frontend = "0.75.0"
cranelift-module =  "0.75.0"
cranelift-object =  "0.75.0"
cranelift-wasm = "0.75.0"
target-lexicon = "0.12"
lucet-module = { path = "../lucet-module", version = "=0.7.0-dev" }
lucet-wiggle-generate = { path = "../lucet-wiggle/generate", version = "=0.7.0-dev" }
witx = "0.9.1"
wasmparser = "0.59.0"
clap = "2.32"

log = "0.4"
env_logger = "0.6"
object = { version = "0.25.2", default-features = false, features = ["write"] }
byteorder = "1.2"
wabt = "0.9.1"
tempfile = "3.0"
bimap = "0.2"
human-size = "0.4"
minisign = "0.5.19"
memoffset = "0.5.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.4"
raw-cpuid = "9.0.0"
rayon = "1.5.0"
veriwasm = "0.1.1"

[features]
default = []
old-x64-backend = []
