[package]
name = "lucet-benchmarks"
version = "0.4.1"
description = "Benchmarks for the Lucet runtime"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
criterion = "0.3.0"
lucetc = { path = "../../lucetc" }
lucet-module = { path = "../../lucet-module" }
lucet-runtime = { path = "../../lucet-runtime" }
lucet-runtime-internals = { path = "../../lucet-runtime/lucet-runtime-internals" }
lucet-wasi = { path = "../../lucet-wasi" }
lucet-wasi-sdk = { path = "../../lucet-wasi-sdk" }
nix = "0.15"
num_cpus = "1.0"
rayon = "1.0"
tempfile = "3.0"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
