[package]
name = "lucet-microbenchmarks"
version = "0.1.0"
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>"]
edition = "2018"

[dependencies]
criterion = "0.2"
lucetc = { path = "../../lucetc" }
lucet-runtime = { path = "../../lucet-runtime" }
lucet-wasi = { path = "../../lucet-wasi" }
lucet-wasi-sdk = { path = "../../lucet-wasi-sdk" }
tempfile = "3.0"

[lib]
bench = false

[[bench]]
name = "microbenchmarks"
harness = false
